# mini_windmill

./: README.md
.devcontainer/: devcontainer.json
backend/: Cargo.toml  openapi.yaml
backend/src/: db.rs  flow.rs  handler.rs  job.rs  lib.rs  main.rs  step.rs  worker.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css  app.html  store.js
frontend/src/routes/: __layout.svelte  flows.svelte  index.svelte  stats.svelte
frontend/src/routes/components/: Job.svelte  Modal.svelte  ModalFlow.svelte  Navbar.svelte  Step.svelte  Workers.svelte
