[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
flume = "0"
tokio = { version = "1", features = ["full", "tracing", "time"] }
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }
serde = "1" 
serde_json = "1"
anyhow = "1"
thiserror = "1"
regex = "1"
futures = "0.3"
axum = "0.5"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version="0.3", features = ["trace", "cors"] }
md5 = "0.7"